feat : 멤버서비스 개발